statum-macros/tests/ui/invalid_transition_custom_branch_same_name.stderr
error: Error: transition method `Machine<Draft>::decide` returns an unsupported type.
       Found: `fn decide(self) -> Branch<Machine<Accepted>, Machine<Rejected>>`
       Expected: `fn decide(self) -> Machine<NextState>`
       Reason: expected the impl target machine path directly, a source-backed type alias that expands to it, or that same machine path wrapped in a supported `Option`, `Result`, or `Branch` shape
       Fix: return `Machine<NextState>` directly.
       Primary branch: `Branch<Machine<Accepted>, Machine<Rejected>>`
       Note: Supported wrappers are `::core::option::Option<...>`, `::core::result::Result<..., E>`, and `::statum::Branch<..., ...>`, plus ordinary source-declared type aliases that expand to those shapes.
             Imported aliases, macro-generated aliases, include-generated aliases, ambiguous aliases, and foreign machine paths are still rejected because transition introspection only follows source-backed type aliases it can resolve in-module.
  --> tests/ui/invalid_transition_custom_branch_same_name.rs:31:38
   |
31 |     fn decide(self, accept: bool) -> Branch<Machine<Accepted>, Machine<Rejected>> {
   |                                      ^^^^^^
